mash: Fix launching touch hud app in mash mode.

Also switching back to listen for move events in touch hud app.

BUG=643396
TEST=manual

Review-Url: https://codereview.chromium.org/2296763009
Cr-Commit-Position: refs/heads/master@{#416394}

Former-commit-id: c4a5b6ba306e15416f45d17a599808311d292de6