ash/mus/accelerators/accelerator_controller_delegate_mus.h
@@ -7,6 +7,7 @@
 
 #include "ash/common/accelerators/accelerator_controller_delegate.h"
 #include "base/macros.h"
+#include "services/shell/public/cpp/connector.h"
 
 namespace ash {
 namespace mus {
@@ -15,7 +16,7 @@ class WindowManager;
 
 class AcceleratorControllerDelegateMus : public AcceleratorControllerDelegate {
  public:
-  AcceleratorControllerDelegateMus();
+  explicit AcceleratorControllerDelegateMus(shell::Connector* connector);
   ~AcceleratorControllerDelegateMus() override;
 
   // AcceleratorControllerDelegate:
@@ -31,6 +32,8 @@ class AcceleratorControllerDelegateMus : public AcceleratorControllerDelegate {
                                              int new_shortcut_id) override;
 
  private:
+  shell::Connector* connector_;
+
   DISALLOW_COPY_AND_ASSIGN(AcceleratorControllerDelegateMus);
 };
 
